<resources>
    <string name="app_name">Saving The State</string>

    <string name="welcome_text">Welcome to app which demonstrates saving and restoring state.</string>
    <string name="select_case_text">Select one of the cases in drawer menu and see how the activities should keep the content\'s state.</string>
    <string name="read_article_button_label">Check the full article</string>

    <string name="lorem_ipsum">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\"</string>
    <string name="de_finibus">\"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?\"</string>
    <string name="auto_saving_scroll_title">Auto-saving</string>
    <string name="auto_saving_header">What\'s done automatically</string>
    <string name="auto_saving_description">The framework handles saving the simple state of the Views automatically. The only thing which has to be done to trigger this behavior is to add the ids to the Views. We\'ll use a ScrollView as an example. Note that the contents of the screen are the same before and after the rotation. They don\'t change also when the Activity is brought back from the background.</string>
    <string name="auto_saving_final">This behavior is triggered automatically by the framework. The only task for the developer is to add the `id` to the `Views` which state should be saved.</string>

    <string name="transient_state_title">Manual saving</string>
    <string name="picked_time">%d:%s</string>
    <string name="selected_time_label">Selected time:</string>
    <string name="pick_time">Pick</string>


    <string name="dynamically_added_fragments_title">Replaced fragments</string>
    <string name="fragment_image_title">Image</string>
    <string name="fragment_svg_title">SVG</string>
    <string name="fragment_xml_title">XML</string>

    <string name="svg_image_title">.SVG</string>
    <string name="svg_image_part_1">&#60;svg</string>
    <string name="svg_image_part_2">style=\"width:24px;height:24px\"\nviewBox=\"0 0 24 24\"&#62;</string>
    <string name="svg_image_part_3">&#60;path</string>
    <string name="svg_image_part_4">d=\"M12, 16A4, 4 0 0,1 8, 12A4, 4 0 0, 1 12,8A4, 4 0 0, 1 16, 12A4, 4 0 0, 1 12, 16M18.7, 12.4C18.42, 12.24 18.13, 12.11 17.84, 12C18.13, 11.89 18.42, 11.76 18.7, 11.6C20.62, 10.5 21.69, 8.5 21.7, 6.41C19.91, 5.38 17.63, 5.3 15.7, 6.41C15.42, 6.57 15.16, 6.76 14.92, 6.95C14.97, 6.64 15, 6.32 15, 6C15, 3.78 13.79, 1.85 12, 0.81C10.21, 1.85 9, 3.78 9,6C9, 6.32 9.03, 6.64 9.08, 6.95C8.84, 6.75 8.58, 6.56 8.3, 6.4C6.38, 5.29 4.1, 5.37 2.3, 6.4C2.3, 8.47 3.37, 10.5 5.3, 11.59C5.58, 11.75 5.87, 11.88 6.16, 12C5.87, 12.1 5.58, 12.23 5.3, 12.39C3.38, 13.5 2.31, 15.5 2.3, 17.58C4.09, 18.61 6.37, 18.69 8.3, 17.58C8.58, 17.42 8.84, 17.23 9.08, 17.04C9.03, 17.36 9, 17.68 9, 18C9, 20.22 10.21, 22.15 12, 23.19C13.79, 22.15 15, 20.22 15, 18C15, 17.68 14.97, 17.36 14.92, 17.05C15.16, 17.25 15.42, 17.43 15.7, 17.59C17.62, 18.7 19.9, 18.62 21.7, 17.59C21.69, 15.5 20.62, 13.5 18.7, 12.4Z\" fill=\"#FFD3E239\" /&#62;</string>
    <string name="svg_image_part_5">&#60;/svg&#62;</string>

    <string name="xml_image_title">.XML Vector Drawable</string>
    <string name="xml_image_part_1">&#60;vector xmlns:android=\"http://schemas.android.com/apk/res/android\"</string>
    <string name="xml_image_part_2">android:height=\"24dp\"\nandroid:width=\"24dp\"\nandroid:viewportWidth=\"24\"\nandroid:viewportHeight=\"24\"&#62;</string>
    <string name="xml_image_part_3">&#60;path</string>
    <string name="xml_image_part_4">android:fillColor=\"#FFD3E239\"\nandroid:pathData=\"M12, 16A4, 4 0 0, 1 8, 12A4, 4 0 0, 1 12, 8A4, 4 0 0, 1 16, 12A4, 4 0 0, 1 12, 16M18.7, 12.4C18.42, 12.24 18.13, 12.11 17.84, 12C18.13, 11.89 18.42, 11.76 18.7, 11.6C20.62, 10.5 21.69, 8.5 21.7, 6.41C19.91, 5.38 17.63, 5.3 15.7,6.41C15.42, 6.57 15.16, 6.76 14.92, 6.95C14.97, 6.64 15, 6.32 15, 6C15, 3.78 13.79, 1.85 12, 0.81C10.21, 1.85 9, 3.78 9, 6C9, 6.32 9.03, 6.64 9.08, 6.95C8.84, 6.75 8.58, 6.56 8.3, 6.4C6.38, 5.29 4.1, 5.37 2.3, 6.4C2.3, 8.47 3.37, 10.5 5.3, 11.59C5.58, 11.75 5.87, 11.88 6.16, 12C5.87, 12.1 5.58, 12.23 5.3,12.39C3.38, 13.5 2.31, 15.5 2.3, 17.58C4.09, 18.61 6.37, 18.69 8.3, 17.58C8.58, 17.42 8.84, 17.23 9.08, 17.04C9.03, 17.36 9, 17.68 9, 18C9, 20.22 10.21, 22.15 12, 23.19C13.79, 22.15 15, 20.22 15, 18C15, 17.68 14.97, 17.36 14.92, 17.05C15.16, 17.25 15.42, 17.43 15.7, 17.59C17.62, 18.7 19.9, 18.62 21.7, 17.59C21.69, 15.5 20.62, 13.5 18.7, 12.4Z" /&#62;</string>
    <string name="xml_image_part_5">&#60;/vector&#62;</string>


    <string name="fragments_in_viewpager_title">Fragments in a ViewPager</string>
    <string name="fragment_croissoint_title">Croissoint</string>
    <string name="fragment_pear_title">Pear</string>
    <string name="fragment_lime_title">Lime</string>


    <string name="recycler_view_title">Collections</string>
    <string name="connection_problems">Connection problems</string>

</resources>
