<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/mn_autosaving"
        android:icon="@drawable/ic_auto_fix"
        android:title="@string/auto_saving_scroll_title" />

    <item
        android:id="@+id/mn_transient_state"
        android:icon="@drawable/ic_clock"
        android:title="@string/transient_state_title" />

    <item
        android:id="@+id/mn_dynamically_added_fragments"
        android:icon="@drawable/ic_flower"
        android:title="@string/dynamically_added_fragments_title" />

    <item
        android:id="@+id/mn_fragments_in_viewpager"
        android:icon="@drawable/ic_view_carousel"
        android:title="@string/fragments_in_viewpager_title" />

    <item
        android:id="@+id/mn_recycler_view"
        android:icon="@drawable/ic_paw"
        android:title="@string/recycler_view_title" />

</menu>