<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fda_svg_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:clipToPadding="false">

    <LinearLayout
        style="@style/AppTheme.CodeSnippet.Overlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/AppTheme.CodeStyleText.Title"
            android:text="@string/svg_image_title"
            android:textColor="#ffab40" />

        <TextView
            style="@style/AppTheme.CodeStyleText"
            android:text="@string/svg_image_part_1" />

        <TextView
            style="@style/AppTheme.CodeStyleText.Tab1"
            android:text="@string/svg_image_part_2" />

        <TextView
            style="@style/AppTheme.CodeStyleText.Tab2"
            android:text="@string/svg_image_part_3" />

        <TextView
            style="@style/AppTheme.CodeStyleText.Tab3"
            android:text="@string/svg_image_part_4" />

        <TextView
            style="@style/AppTheme.CodeStyleText"
            android:text="@string/svg_image_part_5"
            android:layout_marginBottom="4dp"/>

    </LinearLayout>

</ScrollView>